Renamed HOST to API_HOST

--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
+API_HOST=http://customer-console.dev
 DEBUG=false
 RACK_ENV=development
 RAILS_ENV=development
@@ -5,4 +6,3 @@ PORT=3000
 UNICORN_WORKERS=1
 UNICORN_TIMEOUT=30
 UNICORN_PRELOAD_APP=false
-HOST=http://customer-console.dev
