--- a/.env.systest
+++ b/.env.systest
@@ -1,3 +1,3 @@
-HOST=http://customer-console.syt.dbg.westfield.com
+API_HOST=http://customer-console.syt.dbg.westfield.com
 RACK_ENV=systest
 RAILS_ENV=systest
