--- a/config/appconfig.yml
+++ b/config/appconfig.yml
@@ -1,8 +1,10 @@
 defaults: &defaults
-  store_service_url: <%= "http://store-service.#{Rails.env}.dbg.westfield.com:#{ENV['STORE_SERVICE_PORT'] || 80}/stores.json" %>
+  service_host: <%= Rails.env %>.dbg.westfield.com
 
 development:
   <<: *defaults
+  # You can do this if you want to test somthing!
+  # service_host: systest.dbg.westfield.com
 
 test:
   <<: *defaults
