--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,6 @@
-API_HOST=http://customer-console.test
-RACK_ENV=test
-RAILS_ENV=test
+RACK_ENV=systest
+RAILS_ENV=systest
+PORT=3000
+UNICORN_WORKERS=1
+UNICORN_TIMEOUT=30
+UNICORN_PRELOAD_APP=false
