--- a/config/appconfig.yml
+++ b/config/appconfig.yml
@@ -1,4 +1,5 @@
 defaults: &defaults
+  product_service_url: http://product-service.<%= Rails.env %>.dbg.westfield.com/api/product/latest
 
 development:
   <<: *defaults
