--- a/spec/fixtures/vcr_cassettes/bondijunction_movies.yml
+++ b/spec/fixtures/vcr_cassettes/bondijunction_movies.yml
@@ -16,10 +16,6 @@ http_interactions:
       code: 200
       message: 
     headers:
-      Date:
-      - Wed, 05 Jun 2013 07:13:20 GMT
-      Server:
-      - Apache/2.2.15 (Red Hat)
       X-Frame-Options:
       - SAMEORIGIN
       X-XSS-Protection:
@@ -28,29 +24,25 @@ http_interactions:
       - nosniff
       X-UA-Compatible:
       - chrome=1
+      Content-Type:
+      - application/json; charset=utf-8
       ETag:
-      - '"f715eacf649fa985d2fd41b87ad172ec"'
+      - '"0f8bd59371806c4254dbec6b59619801"'
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - fcafe260-e795-4581-ba05-e2dce91b492e
+      - d3667252-4421-498d-82a0-5ba92f751bf7
       X-Runtime:
-      - '0.012279'
-      X-Powered-By:
-      - Phusion Passenger 4.0.5
-      Status:
-      - 200 OK
+      - '0.042326'
+      Date:
+      - Fri, 07 Jun 2013 07:16:36 GMT
       Connection:
       - close
-      Transfer-Encoding:
-      - chunked
-      Content-Type:
-      - application/json; charset=utf-8
     body:
       encoding: UTF-8
       string: '{"movies":[{"title":"James Bond"},{"title":"Point Break"}]}'
     http_version: 
-  recorded_at: Wed, 05 Jun 2013 07:13:20 GMT
+  recorded_at: Fri, 07 Jun 2013 07:16:36 GMT
 - request:
     method: get
     uri: http://centre-service.test.dbg.westfield.com/api/centre/master/centres/bondijunction.json
@@ -67,10 +59,6 @@ http_interactions:
       code: 200
       message: 
     headers:
-      Date:
-      - Wed, 05 Jun 2013 07:13:20 GMT
-      Server:
-      - Apache/2.2.15 (Red Hat)
       X-Frame-Options:
       - SAMEORIGIN
       X-XSS-Protection:
@@ -79,28 +67,24 @@ http_interactions:
       - nosniff
       X-UA-Compatible:
       - chrome=1
+      Content-Type:
+      - application/json; charset=utf-8
       ETag:
-      - '"03a5aa1e56709b0f3de4d2e71e05a674"'
+      - '"b553e36a731ffddddeae35561d8c0910"'
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - d6d5071b-0553-4539-997f-563437f59e56
+      - 9e194198-239c-4858-8444-1011bcc9e241
       X-Runtime:
-      - '0.025754'
-      X-Powered-By:
-      - Phusion Passenger 4.0.5
-      Status:
-      - 200 OK
+      - '0.345745'
+      Date:
+      - Fri, 07 Jun 2013 07:16:37 GMT
       Connection:
       - close
-      Transfer-Encoding:
-      - chunked
-      Content-Type:
-      - application/json; charset=utf-8
     body:
       encoding: UTF-8
       string: '{"code":"bondijunction","name":"Westfield Bondi Junction","short_name":"Bondi
-        Junction","street_address":"500 Oxford St","postcode":"2022","country":"au","latitude":"-33.891289","longitude":"151.250815","email_address":"bondijunction@au.westfield.com","enabled":true,"_links":{"self":{"href":"http://localhost:4050/centre/bondijunction"}}}'
+        Junction","street_address":"500 Oxford St","postcode":"2022","country":"au","state":"NSW","latitude":"-33.891289","longitude":"151.250815","email_address":"bondijunction@au.westfield.com","enabled":true,"trading_hours":[],"_links":{"self":{"href":"http://localhost:3005/centres/bondijunction"}}}'
     http_version: 
-  recorded_at: Wed, 05 Jun 2013 07:13:20 GMT
+  recorded_at: Fri, 07 Jun 2013 07:16:37 GMT
 recorded_with: VCR 2.5.0
