--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,6 @@
     "jquery-placeholder": "~2.0.7",
     "jquery-ui": "1.10.1",
     "matchMedia": "latest",
-    "selectivizr": "~1.0.2",
-    "jquery-ujs": "latest"
+    "selectivizr": "~1.0.2"
   }
 }
