--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "selectivizr": "~1.0.2",
     "flexslider": "latest",
     "html5shiv": "~3.6.2",
-    "bootstrap": "~2.3.2"
+    "bootstrap": "~2.3.2",
+    "angular-unstable": "~1.1.5"
   }
 }
