--- a/customer_console.conf
+++ b/customer_console.conf
@@ -14,7 +14,7 @@
 # | Proper MIME types for all files                                            |
 # ------------------------------------------------------------------------------
 
-<IfModule mod_mime.c>
+<IfModule mime_module>
 
   # Audio
     AddType audio/mp4                                   m4a f4a f4b
