update apache configuration to work in uat

--- a/customer_console.conf
+++ b/customer_console.conf
@@ -1,8 +1,9 @@
 <VirtualHost *:80>
-  ServerName  customer-console.prod.dbg.westfield.com
+  ServerName  customer-console.production.dbg.westfield.com
   ServerAlias customer-console.uat.dbg.westfield.com
-  ServerAlias customer-console.syt.dbg.westfield.com
   ServerAlias customer-console.systest.dbg.westfield.com
+  ServerAlias customer-console.test.dbg.westfield.com
+  ServerAlias customer-console.development.dbg.westfield.com
 
   DocumentRoot /var/www/customerconsole/current/public
   PassengerHighPerformance on
