re-add .production. and .uat. serveralias entries so that nagios polling of health checks work again

--- a/customer_console.conf
+++ b/customer_console.conf
@@ -2,9 +2,12 @@
 <VirtualHost *:80>
   ServerName beta.westfield.com.au
   ServerAlias beta.uat.westfield.com.au
+  ServerAlias customer-console.production.dbg.westfield.com
+  ServerAlias customer-console.uat.dbg.westfield.com
   ServerAlias customer-console.systest.dbg.westfield.com
   ServerAlias customer-console.systest3.dbg.westfield.com
   ServerAlias customer-console.systest4.dbg.westfield.com
+  ServerAlias customer-console.test.dbg.westfield.com
   ServerAlias customer-console.development.dbg.westfield.com
 
   DocumentRoot /var/www/customerconsole/current/public
@@ -14,9 +17,12 @@
 <VirtualHost *:443>
   ServerName secure.westfield.com
   ServerAlias secure.uat.westfield.com
+  ServerAlias customer-console.production.dbg.westfield.com
+  ServerAlias customer-console.uat.dbg.westfield.com
   ServerAlias customer-console.systest.dbg.westfield.com
   ServerAlias customer-console.systest3.dbg.westfield.com
   ServerAlias customer-console.systest4.dbg.westfield.com
+  ServerAlias customer-console.test.dbg.westfield.com
   ServerAlias customer-console.development.dbg.westfield.com
 
   DocumentRoot /var/www/customerconsole/current/public
