--- a/spec/fixtures/vcr_cassettes/sydney_movies.yml
+++ b/spec/fixtures/vcr_cassettes/sydney_movies.yml
@@ -2,13 +2,58 @@
 http_interactions:
 - request:
     method: get
+    uri: http://centre-service.test.dbg.westfield.com/api/centre/master/centres/sydney.json
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v0.8.8
+      Content-Type:
+      - application/json
+  response:
+    status:
+      code: 200
+      message: 
+    headers:
+      X-Frame-Options:
+      - SAMEORIGIN
+      X-XSS-Protection:
+      - 1; mode=block
+      X-Content-Type-Options:
+      - nosniff
+      X-UA-Compatible:
+      - chrome=1
+      Content-Type:
+      - application/json; charset=utf-8
+      ETag:
+      - '"eb1177989a99f479392f34dec53b25dd"'
+      Cache-Control:
+      - max-age=0, private, must-revalidate
+      X-Request-Id:
+      - d20a4ed7-f640-422b-a88d-efddf5f485d9
+      X-Runtime:
+      - '0.012290'
+      Date:
+      - Tue, 27 Aug 2013 05:50:16 GMT
+      Connection:
+      - close
+    body:
+      encoding: UTF-8
+      string: '{"name":"Westfield Sydney","short_name":"Sydney","code":"sydney","business_unit_code":"16621","type":"premium","street_address":"Cnr
+        Pitt St Mall and Market St","state":"NSW","postcode":"2000","country":"au","phone_number":"(02)
+        8236 9200","email_address":"","latitude":"-33.870371","longitude":"151.207735","today_opening_time":null,"today_closing_time":null,"number_of_levels":0,"micello_community":null,"facebook":null,"twitter":null,"google_plus":null,"instagram":null,"youtube":null,"retail":true,"enabled":true}'
+    http_version: 
+  recorded_at: Tue, 27 Aug 2013 05:50:16 GMT
+- request:
+    method: get
     uri: http://movie-service.test.dbg.westfield.com/api/movie/master/movie_sessions.json?centre=sydney
     body:
       encoding: US-ASCII
       string: ''
     headers:
       User-Agent:
-      - Faraday v0.8.7
+      - Faraday v0.8.8
       Content-Type:
       - application/json
   response:
@@ -31,27 +76,27 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - d8c87b5d-0b96-4868-9144-2c512fc8102d
+      - b188a735-f79f-4744-96a0-feb7bff68060
       X-Runtime:
-      - '0.014899'
+      - '0.009721'
       Date:
-      - Wed, 17 Jul 2013 05:27:57 GMT
+      - Tue, 27 Aug 2013 05:50:16 GMT
       Connection:
       - close
     body:
       encoding: UTF-8
       string: '{"movie_sessions":[]}'
     http_version: 
-  recorded_at: Wed, 17 Jul 2013 05:27:57 GMT
+  recorded_at: Tue, 27 Aug 2013 05:50:16 GMT
 - request:
     method: get
-    uri: http://movie-service.test.dbg.westfield.com/api/movie/master/movies.json?centre=sydney&date=17-07-2013
+    uri: http://movie-service.test.dbg.westfield.com/api/movie/master/movies.json?centre=sydney&date=29-08-2013
     body:
       encoding: US-ASCII
       string: ''
     headers:
       User-Agent:
-      - Faraday v0.8.7
+      - Faraday v0.8.8
       Content-Type:
       - application/json
   response:
@@ -70,64 +115,20 @@ http_interactions:
       Content-Type:
       - application/json; charset=utf-8
       ETag:
-      - '"283a5a8f3eb069eaaba85f6109c8bb42"'
+      - '"d751713988987e9331980363e24189ce"'
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 33ad5ceb-37f1-4734-aa82-023bdd2ed537
+      - c7ef20ac-1502-4b64-bb26-9e4554b72d93
       X-Runtime:
-      - '0.019883'
+      - '0.015137'
       Date:
-      - Wed, 17 Jul 2013 05:27:57 GMT
+      - Tue, 27 Aug 2013 05:50:16 GMT
       Connection:
       - close
     body:
       encoding: UTF-8
-      string: '{"movies":[]}'
+      string: '[]'
     http_version: 
-  recorded_at: Wed, 17 Jul 2013 05:27:57 GMT
-- request:
-    method: get
-    uri: http://centre-service.test.dbg.westfield.com/api/centre/master/centres/sydney.json
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      User-Agent:
-      - Faraday v0.8.7
-      Content-Type:
-      - application/json
-  response:
-    status:
-      code: 200
-      message: 
-    headers:
-      X-Frame-Options:
-      - SAMEORIGIN
-      X-XSS-Protection:
-      - 1; mode=block
-      X-Content-Type-Options:
-      - nosniff
-      X-UA-Compatible:
-      - chrome=1
-      Content-Type:
-      - application/json; charset=utf-8
-      ETag:
-      - '"bb189f0aa12a6917d5c3ac06ad9b1729"'
-      Cache-Control:
-      - max-age=0, private, must-revalidate
-      X-Request-Id:
-      - b03dec53-7c29-4751-8d1d-24b6c0c1f8bb
-      X-Runtime:
-      - '0.027219'
-      Date:
-      - Wed, 17 Jul 2013 05:27:57 GMT
-      Connection:
-      - close
-    body:
-      encoding: UTF-8
-      string: '{"code":"sydney","name":"Westfield Sydney","short_name":"Sydney","street_address":"Cnr
-        Pitt St Mall and Market St","postcode":"2000","state":"NSW","country":"au","latitude":"-33.870371","longitude":"151.207735","email_address":"","retail":true,"enabled":true,"trading_hours":[],"_links":{"self":{"href":"http://localhost:3005/centres/sydney"}}}'
-    http_version: 
-  recorded_at: Wed, 17 Jul 2013 05:27:57 GMT
+  recorded_at: Tue, 27 Aug 2013 05:50:16 GMT
 recorded_with: VCR 2.5.0
