Revert "Merge pull request #378 from ldewey/WSF-4687"
This reverts commit 9ba4a2f193eacddd08c3fce0bbc03775a6ab3586, reversing
changes made to 146f059b6243de9e5d608b86913fb2f7daaf6d08.

--- a/config/cloudinary.yml
+++ b/config/cloudinary.yml
@@ -3,8 +3,8 @@ defaults: &defaults
   cloud_name: wlabs
   api_key: '126264366716471'
   api_secret: hrsUPxt6OVXvX_06NMyYKsARjUA
-  enhance_image_tag: true
-  static_image_support: true
+  enhance_image_tag: false
+  static_image_support: false
 
 development:
   <<: *defaults
