--- a/config/appconfig.yml
+++ b/config/appconfig.yml
@@ -1,4 +1,6 @@
 defaults: &defaults
+  google_maps_business_client_id: gme-westfieldltd
+  google_maps_business_key: bE5iXqPOtk4BQzkJKbtpsHxWhRY=
 
 development:
   <<: *defaults
