Minimal instructions to run locally with foreman

--- a/.env.development
+++ b/.env.development
@@ -5,3 +5,5 @@ PORT=3000
 UNICORN_WORKERS=1
 UNICORN_TIMEOUT=30
 UNICORN_PRELOAD_APP=false
+PRODUCT_SERVICE_PORT=3008
+PRODUCT_SERVICE_HOME=../product_service
