Cache fingerprinted assets for 1 year

--- a/customer_console.conf
+++ b/customer_console.conf
@@ -12,6 +12,15 @@
 
   DocumentRoot /var/www/customerconsole/current/public
   PassengerHighPerformance on
+
+  <LocationMatch "^/assets/">
+   Header unset Last-Modified
+   Header unset ETag
+   Header merge Cache-Control public
+   FileETag None
+   ExpiresActive On
+   ExpiresDefault "access plus 1 year"
+  </LocationMatch>
 </VirtualHost>
 
 <VirtualHost *:443>
@@ -32,6 +41,14 @@
   SSLCertificateFile /etc/pki/tls/certs/localhost.crt
   SSLCertificateKeyFile /etc/pki/tls/private/localhost.key
 
+  <LocationMatch "^/assets/">
+   Header unset Last-Modified
+   Header unset ETag
+   Header merge Cache-Control public
+   FileETag None
+   ExpiresActive On
+   ExpiresDefault "access plus 1 year"
+  </LocationMatch>
 </VirtualHost>
 
 
