Add missing apache module

--- a/customer_console.conf
+++ b/customer_console.conf
@@ -18,6 +18,9 @@
    Header unset ETag
    Header merge Cache-Control public
    FileETag None
+   <IfModule !mod_expires.c>
+     LoadModule expires_module modules/mod_expires.so
+   </IfModule>
    ExpiresActive On
    ExpiresDefault "access plus 1 year"
   </LocationMatch>
