--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "prism": "gh-pages",
     "angular-unstable": "~1.1.5",
     "script.js": "*",
-    "jquery-pjax": "~1.7.3"
+    "jquery-pjax": "~1.7.3",
+    "underscore": "~1.5.2"
   },
   "devDependencies": {
     "sinon": "~1.7.3",
