--- a/config/appconfig.yml
+++ b/config/appconfig.yml
@@ -1,6 +1,7 @@
 defaults: &defaults
   google_maps_business_client_id: gme-westfieldltd
   google_maps_business_key: bE5iXqPOtk4BQzkJKbtpsHxWhRY=
+  proxy: http://proxy.dbg.westfield.com:8080
 
 development:
   <<: *defaults
