--- a/customer_console.conf
+++ b/customer_console.conf
@@ -24,6 +24,40 @@
    ExpiresActive On
    ExpiresDefault "access plus 1 year"
   </LocationMatch>
+
+  RewriteEngine On
+  # /au/retailers/<retailer_code> => http://beta.westfield.com.au/products?retailer=<retailer_code>
+  RewriteRule ^/au/retailers/(.*) http://%{SERVER_NAME}/products?retailer=$1 [R,L]
+
+  # /m/au/centres/bondijunction/shopping-hours => /bondijunction/hours
+  RewriteRule ^/m/au/centres/(.*)/shopping-hours/? http://%{SERVER_NAME}/$1/hours [R,L]
+
+  # /m/au/centres/bondijunction => /bondijunction
+  RewriteRule ^/m/au/centres/(.*)$ http://%{SERVER_NAME}/$1 [R,L]
+
+  # /m/au => http://westfield.com.au; /au/ => http://westfield.com.au
+  RewriteRule ^/(m/)?au/?$ http://%{SERVER_NAME}/ [R,L]
+
+  # /m/au/products => http://westfield.com.au/products; /au/products => http://westfield.com.au/products
+  RewriteRule ^/(m/)?au/products/?$ http://%{SERVER_NAME}/products [R,L]
+
+  # /au/centres => http://westfield.com.au/
+  RewriteRule ^/au/westfield-centres/?$ http://%{SERVER_NAME}/ [R,L]
+
+  # NEED TO FIX THIS ONE
+  #RewriteRule ^/au/on-sale/?$ http://%{SERVER_NAME}/ [R,L]
+
+  # FIND OUT REDIRECT URL FOR THIS
+  #RewriteRule ^/au/help/contact-us/?$ http://%{SERVER_NAME}/ [R,L]
+  
+  # /unsubscribe
+  RewriteRule ^/unsubscribe/?$ https://secure.westfield.com.au/unsubscribe [R,L]
+
+  # /au/brands/<brand_name> => http://westfield.com.au/products?brands=<brand_name>
+  RewriteRule ^/au/brands/(.*)/?$ http://%{SERVER_NAME}/products?brand=$1 [R,L]
+
+  # /<centre_name>/centre-information/shopping-hours => http://westfield.com.au/<centre_name>/hours
+  RewriteRule ^/(.*)/centre-information/shopping-hours/ http://%{SERVER_NAME}/$1/hours [R,L]
 </VirtualHost>
 
 <VirtualHost *:443>
