WSF-4921 make trailing slashes in urls optional

--- a/customer_console.conf
+++ b/customer_console.conf
@@ -27,13 +27,13 @@
 
   RewriteEngine On
   # /au/retailers/<retailer_code> => http://beta.westfield.com.au/products?retailer=<retailer_code>
-  RewriteRule ^/au/retailers/(.*) http://%{SERVER_NAME}/products?retailer=$1 [R,L]
+  RewriteRule ^/au/retailers/(.*)/? http://%{SERVER_NAME}/products?retailer=$1 [R,L]
 
   # /m/au/centres/bondijunction/shopping-hours => /bondijunction/hours
   RewriteRule ^/m/au/centres/(.*)/shopping-hours/? http://%{SERVER_NAME}/$1/hours [R,L]
 
   # /m/au/centres/bondijunction => /bondijunction
-  RewriteRule ^/m/au/centres/(.*)$ http://%{SERVER_NAME}/$1 [R,L]
+  RewriteRule ^/m/au/centres/(.*)/?$ http://%{SERVER_NAME}/$1 [R,L]
 
   # /m/au => http://westfield.com.au; /au/ => http://westfield.com.au
   RewriteRule ^/(m/)?au/?$ http://%{SERVER_NAME}/ [R,L]
@@ -57,7 +57,7 @@
   RewriteRule ^/au/brands/(.*)/?$ http://%{SERVER_NAME}/products?brand=$1 [R,L]
 
   # /<centre_name>/centre-information/shopping-hours => http://westfield.com.au/<centre_name>/hours
-  RewriteRule ^/(.*)/centre-information/shopping-hours/ http://%{SERVER_NAME}/$1/hours [R,L]
+  RewriteRule ^/(.*)/centre-information/shopping-hours/?$ http://%{SERVER_NAME}/$1/hours [R,L]
 </VirtualHost>
 
 <VirtualHost *:443>
