WSF-4921 use x-forwarded-host for redirection

--- a/customer_console.conf
+++ b/customer_console.conf
@@ -27,37 +27,48 @@
 
   RewriteEngine On
   # /au/retailers/<retailer_code> => http://beta.westfield.com.au/products?retailer=<retailer_code>
-  RewriteRule ^/au/retailers/(.*)/? http://%{SERVER_NAME}/products?retailer=$1 [R,L]
+  RewriteCond %{HTTP:X-Forwarded-Host} .
+  RewriteRule ^/au/retailers/(.*)/? http://%{HTTP:X-Forwarded-Host}/products?retailer=$1 [R,L]
 
   # /m/au/centres/bondijunction/shopping-hours => /bondijunction/hours
-  RewriteRule ^/m/au/centres/(.*)/shopping-hours/? http://%{SERVER_NAME}/$1/hours [R,L]
+  RewriteCond %{HTTP:X-Forwarded-Host} .
+  RewriteRule ^/m/au/centres/(.*)/shopping-hours/? http://%{HTTP:X-Forwarded-Host}/$1/hours [R,L]
 
   # /m/au/centres/bondijunction => /bondijunction
-  RewriteRule ^/m/au/centres/(.*)/?$ http://%{SERVER_NAME}/$1 [R,L]
+  RewriteCond %{HTTP:X-Forwarded-Host} .
+  RewriteRule ^/m/au/centres/(.*)/?$ http://%{HTTP:X-Forwarded-Host}/$1 [R,L]
 
   # /m/au => http://westfield.com.au; /au/ => http://westfield.com.au
-  RewriteRule ^/(m/)?au/?$ http://%{SERVER_NAME}/ [R,L]
+  RewriteCond %{HTTP:X-Forwarded-Host} .
+  RewriteRule ^/(m/)?au/?$ http://%{HTTP:X-Forwarded-Host}/ [R,L]
 
   # /m/au/products => http://westfield.com.au/products; /au/products => http://westfield.com.au/products
-  RewriteRule ^/(m/)?au/products/?$ http://%{SERVER_NAME}/products [R,L]
+  RewriteCond %{HTTP:X-Forwarded-Host} .
+  RewriteRule ^/(m/)?au/products/?$ http://%{HTTP:X-Forwarded-Host}/products [R,L]
 
   # /au/centres => http://westfield.com.au/
-  RewriteRule ^/au/westfield-centres/?$ http://%{SERVER_NAME}/ [R,L]
+  RewriteCond %{HTTP:X-Forwarded-Host} .
+  RewriteRule ^/au/westfield-centres/?$ http://%{HTTP:X-Forwarded-Host}/ [R,L]
 
-  # NEED TO FIX THIS ONE
-  #RewriteRule ^/au/on-sale/?$ http://%{SERVER_NAME}/ [R,L]
+  # NEED ON-SALE bug fixed for this one to work
+  #RewriteCond %{HTTP:X-Forwarded-Host} .
+  # RewriteRule ^/au/on-sale/?$ http://%{HTTP:X-Forwarded-Host}/ [R,L]
 
   # FIND OUT REDIRECT URL FOR THIS
-  #RewriteRule ^/au/help/contact-us/?$ http://%{SERVER_NAME}/ [R,L]
+  #RewriteCond %{HTTP:X-Forwarded-Host} .
+  # RewriteRule ^/au/help/contact-us/?$ http://%{HTTP:X-Forwarded-Host}/ [R,L]
   
   # /unsubscribe
+  RewriteCond %{HTTP:X-Forwarded-Host} .
   RewriteRule ^/unsubscribe/?$ https://secure.westfield.com.au/unsubscribe [R,L]
 
   # /au/brands/<brand_name> => http://westfield.com.au/products?brands=<brand_name>
-  RewriteRule ^/au/brands/(.*)/?$ http://%{SERVER_NAME}/products?brand=$1 [R,L]
+  RewriteCond %{HTTP:X-Forwarded-Host} .
+  RewriteRule ^/au/brands/(.*)/?$ http://%{HTTP:X-Forwarded-Host}/products?brand=$1 [R,L]
 
   # /<centre_name>/centre-information/shopping-hours => http://westfield.com.au/<centre_name>/hours
-  RewriteRule ^/(.*)/centre-information/shopping-hours/?$ http://%{SERVER_NAME}/$1/hours [R,L]
+  RewriteCond %{HTTP:X-Forwarded-Host} .
+  RewriteRule ^/(.*)/centre-information/shopping-hours/?$ http://%{HTTP:X-Forwarded-Host}/$1/hours [R,L]
 </VirtualHost>
 
 <VirtualHost *:443>
